--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div style="width: 100%">
         <div class="container_header">
           <div>
-            <h3>Virtual Class Gunadarma</h3>
+            <h3>Virtual Class Gunadar</h3>
           </div>
           <div style="display: flex; align-items: center; column-gap: 4px">
             <div class="profile_img">BS</div>
